--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 											<div class="row gtr-uniform">
 												<div class="col-12"><span class="image fit"><img src="images/mtq1.jpg" alt="" /></span></div>
 												<div class="col-4"><span class="image fit"><img src="images/mtq2.jpg" alt="" /></span></div>
-												<div class="col-4"><span class="image fit"><img src="images/mtq4.jpg" alt="" /></span></div>
+												<div class="col-4"><span class="image fit"><img src="images/mtq4.JPG" alt="" /></span></div>
 												<div class="col-4"><span class="image fit"><img src="images/mtq3.jpg" alt="" /></span></div>
 
 												<div class="col-12"><span class="image fit"><img src="images/rome1.jpg" alt="" /></span></div>
